# arrt

./: .gitignore  .hgignore  Cargo.toml  README.md  TODO  materials.json  quality_presets.json
docs/: profiling.xlsx
src/: main.rs  vectorlib.rs
src/arrt/: camera.rs  command_line.rs  geometry.rs  intersect.rs  job.rs  material.rs  matrix.rs  mod.rs  quality.rs  ray.rs  vector.rs
src/raytrace/: camera.rs  command_line.rs  geometry.rs  intersect.rs  material.rs  misc.rs  mod.rs  quality.rs  ray.rs  vector.rs
src/vector/: mod.rs
