[package]
name = "arrt"
description = "Another Rust Ray Tracer"
version = "0.1.0"
authors = ["Thomas Sampson <tmsampson@gmail.com>"]
edition = "2018"

[dependencies]
bmp = "0.4.0"
rand = "0.6.5"
time = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"
mini_gl_fb = "0.7.0"
winit = "0.18.1"